--- a/backend/app/templates/order_cancelled_admin_notification.html
+++ b/backend/app/templates/order_cancelled_admin_notification.html
@@ -99,7 +99,9 @@
             </div>
             
             <p>No immediate action is required. You can view the order details in the admin dashboard if a follow-up is needed.</p>
-
+            <div class="button-wrapper">
+                <a href="{{ admin_order_link }}" class="button">View Order in Admin</a>
+            </div>
         </div>
 
         <div class="footer">
